<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Specs</string>
  <string name="operating_system">OPERATING SYSTEM</string>
  <string name="sdk_version">SDK Version</string>
  <string name="release">Release</string>
  <string name="locale">Locale</string>
  <string name="screen">SCREEN</string>
  <string name="size">Size</string>
  <string name="small">Small</string>
  <string name="normal">Normal</string>
  <string name="large">Large</string>
  <string name="xlarge">XLarge</string>
  <string name="undefined">Undefined</string>
  <string name="resolution">Resolution</string>
  <string name="density_ldpi">LDPI</string>
  <string name="density_mdpi">MDPI</string>
  <string name="density_hdpi">HDPI</string>
  <string name="density_280dpi">280 DPI, Between H and X</string>
  <string name="density_xhdpi">XHDPI</string>
  <string name="density_400dpi">400 DPI, Between X and XX</string>
  <string name="density_xxhdpi">XXHDPI</string>
  <string name="density_560dpi">560 DPI, Between XX and XXX</string>
  <string name="density_xxxhdpi">XXXHDPI</string>
  <string name="tvdpi">TVDPI</string>
  <string name="unknown_dpi">\?DPI</string>
  <string name="dpi">DPI</string>
  <string name="width_height">Width/Height</string>
  <string name="density_multiplier">Density Multiplier</string>
  <string name="other">OTHER</string>
  <string name="codename">Codename</string>
  <string name="font_scale">Font Scale</string>
  <string name="send_device_specs">Send Device Specs</string>
  <string name="gathered_by_specs">Gathered by Specs</string>
  <string name="device">DEVICE</string>
  <string name="storage">STORAGE</string>
  <string name="make">Make</string>
  <string name="model">Model</string>
  <string name="totalStorage">Total Storage</string>
  <string name="usedStorage">Remaining Storage</string>
  <string name="orientation">Orientation</string>
  <string name="refresh_rate">Refresh Rate</string>
  <string name="camera">CAMERA</string>
  <string name="camera_front">Front</string>
  <string name="camera_back">Back</string>


  <string-array name="version_code">
    <item>Base</item>                     <!-- API 1 -->
    <item>Base 1.1</item>                 <!-- API 2 -->
    <item>Cupcake</item>                  <!-- API 3 -->
    <item>Donut</item>                    <!-- API 4 -->
    <item>Eclair</item>                   <!-- API 5 -->
    <item>Eclair 0.1</item>               <!-- API 6 -->
    <item>Eclair MR1</item>               <!-- API 7 -->
    <item>Froyo</item>                    <!-- API 8 -->
    <item>Gingerbread</item>              <!-- API 9 -->
    <item>Gingerbread MR1</item>          <!-- API 10 -->
    <item>Honeycomb</item>                <!-- API 11 -->
    <item>Honeycomb MR1</item>            <!-- API 12 -->
    <item>Honeycomb MR2</item>            <!-- API 13 -->
    <item>Ice Cream Sandwich</item>       <!-- API 14, 4.0 -->
    <item>Ice Cream Sandwich MR1</item>   <!-- API 15, 4.0.3 -->
    <item>Jelly Bean</item>               <!-- API 16 -->
    <item>Jelly Bean MR1: Moar jelly beans!</item>        <!-- API 17, 4.2,4.2.2 -->
    <item>Jelly Bean MR2, the revenge of the beans.</item><!-- API 18, 4.3 -->
    <item>KitKat, another tasty treat.</item>             <!-- API 19, 4.4 -->
    <item>KitKat for watches, snacks on the run.</item>   <!-- API 20, 4.4W -->
    <item>Lollipop</item>                 <!-- API 21, 5.0 -->
    <item>Lollipop with an extra sugar coating on the outside!</item>  <!-- API 22, 5.1-5.1.1 -->
    <item>Marshmallow</item>                <!-- API 23, 6.0-6.1 -->
    <item>Android N</item>                  <!-- API 24, 7.0 -->
  </string-array>

</resources>